[package]
name = "rhymomatic"
version = "0.1.0"
authors = ["Caleb Hattingh <caleb.hattingh@gmail.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
phf = { version = "0.8", features = ["macros"] }
bincode = "1.3.3"
serde = "1.0.125"
paw = "1.0.0"
structopt = { version = "0.3", features = [ "paw" ] }
qp-trie = { version = "0.7.6", features = ["serde"] }
# phf_codegen = "0.8.0"

[build-dependencies]
phf_codegen = "0.8.0"
regex = "1.5.3"
itertools = "0.10.0"
qp-trie = { version = "0.7.6", features = ["serde"] }
bincode = "1.3.3"
serde = "1.0.125"
# phf = { version = "0.8", features = ["macros"] }
#
